Fix contrast ratio for wdn_tabs
Use hex values because the accessibility checker (pa11y) can't handle rgba

--- a/wdn/templates_4.0/less/layouts/tabs.less
+++ b/wdn/templates_4.0/less/layouts/tabs.less
@@ -10,13 +10,13 @@
 
     li {
         display: inline-block;
-        background-color: fadeout(@tab-background-color, 95%);
+        background-color: #EDEaE0;
         border-radius: 2px;
         margin: 0 0.4em 5px 0;
         .rem(@base-font-size-sm);
 
         &.selected {
-            background-color: fadeout(@tab-background-color, 90%);
+            background-color: #E3E1D5;
             border-radius: 2px 2px 0 0;
             margin-bottom: 0;
 
@@ -46,7 +46,7 @@
 }
 
 .wdn_tabs_content {
-    background-color: fadeout(@tab-background-color, 90%);
+    background-color: #E3E1D5;
     padding: 1rem;
     
     #maincontent > & {
